[gd_scene load_steps=6 format=2]

[ext_resource path="res://Puzzle Elements/Scripts/Key.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/atlases/key_atlas_32.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/Chain_32.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
resource_local_to_scene = true
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 11.0
height = 16.0

[node name="Key" type="Node2D"]
script = ExtResource( 1 )

[node name="Chain" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 0 )

[node name="KeySpr" type="Sprite" parent="."]
position = Vector2( 0, 32 )
scale = Vector2( 2, 2 )
texture = SubResource( 1 )

[node name="PickupDetect" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="PickupZone" type="CollisionShape2D" parent="PickupDetect"]
position = Vector2( -1, 34 )
shape = SubResource( 2 )

[connection signal="body_entered" from="PickupDetect" to="." method="_on_key_pickup"]
